<resources>

    <string name="admob_id" translatable="false">ca-app-pub-3050564412171997~7085838940</string>

    <string name="ban1_id" translatable="false">ca-app-pub-3050564412171997/9700679406</string>
    <string name="ban2_id" translatable="false">ca-app-pub-3050564412171997/4065209342</string>
    <string name="ban3_id" translatable="false">ca-app-pub-3050564412171997/7632633858</string>
    <string name="inter" translatable="false">ca-app-pub-3050564412171997/2380307176</string>



    <string name="yandex_id" translatable="false">b6caf877-c8c4-45ab-a352-8d92ccc8029c</string>

    <string name="body_gdpr">Продолжая использовать данное приложение Вы принимаете нашу политику конфиденциальности</string>
    <string name="title_gdpr">Здравствуйте!</string>
    <string name="open_gdpr">Открыть текст политики конфиденциальности</string>
    <string name="yes_gdpr">Продолжить использование приложения</string>
    <string name="url_gdpr" translatable="false">https://www.freeprivacypolicy.com/privacy/view/272200879b5cf29dd1b4fcd0f0299409</string>

    <string name="navigation_settings">Настройки</string>
    <string name="settings">Настройки</string>
    <string name="rate_us">Оцените нас</string>
    <string name="share">Поделиться с друзьями</string>
    <string name="accompanying_text">Я использую это приложение для тренировок и оно работает! Попробуй и ты!</string>

    <string name="app_name">Ex</string>
    <string name="home">Домой</string>
    <string name="ex">Упражнения</string>
    <string name="favorites">Фавориты</string>
    <string name="articles">Статьи</string>

    <string name="basic_muscle">Основные мышцы:</string>
    <string name="additional_muscle">Дополнительные:</string>
    <string name="complexity">Сложность выполнения:</string>
    <string name="weight">Вес и количество повторений:</string>
    <string name="detail">Описание упражнения:</string>
    <string name="main_chips">Основные фишки:</string>
    <string name="here_is_nothing">Здесь пока ничего нет</string>
    <string name="count_of_programm">Количество программ - </string>
    <string name="add_favorite">Программа добавлена в фавориты</string>
    <string name="check_connection">Проверьте свое подключение к интернету</string>
    <string name="titleAlertDialog">Здравствуйте</string>
    <string name="bodyAlertDialog">Как успехи в тренировках мотивируют человека заниматься дальше, так положительные оценки и отзывы наших пользователей мотивируют нас создавать качественные приложения! </string>
    <string name="laterButtonAlert">Позже</string>
    <string name="neverButtonAlert">Никогда</string>
    <string name="evaluateButtonAlert">Оценить</string>
    <string name="Grade">Оценить</string>
    <string name="Late">Позже</string>
    <string name="Never">Никогда!</string>


</resources>
