<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/nav_icon_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_ex"
        android:icon="@drawable/nav_icon_ex"
        android:title="@string/ex" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/nav_icon_favorites"
        android:title="@string/favorites" />

    <item
        android:id="@+id/navigation_articles"
        android:icon="@drawable/nav_icon_aticles"
        android:title="@string/articles" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/nav_icon_settings"
        android:title="@string/navigation_settings" />

</menu>